--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <title>WEB1 - Welcome</title>
     <meta charset="utf-8">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130970189-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+    
+        gtag('config', 'UA-130970189-1');
+    </script>
 </head>
 
 <body>
@@ -39,7 +48,7 @@
         </p>
 
     <!--Start of Tawk.to Script-->
-<script type="text/javascript">
+    <script type="text/javascript">
     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
     (function(){
     var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
@@ -51,5 +60,6 @@
     })();
     </script>
     <!--End of Tawk.to Script-->
+
 </body>
 </html>
