--- a/2.html
+++ b/2.html
@@ -16,6 +16,7 @@
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
+        <li><a href="2.html">wtf is this</a></li>
     </ol>
 
     <!--
