--- a/2.html
+++ b/2.html
@@ -8,14 +8,22 @@
             color: orange;
             text-decoration: none;
         }
+        h1 {
+            font-size: 500%;
+            text-align: center;
+            margin: auto;
+            width: 90%;
+            border: 10px solid black;
+            padding: 7px;
+        }
     </style>
 </head>
 
 <body>
-    <h1><a href="index.html" style="color:peru">WEB</a></h1>
+    <h1><a href="index.html" style="color:black">WEB1</a></h1>
     <ol><h3>목차</h3>
-        <li><a href="1.html">HTML</a></li>
-        <li><a href="2.html" style="color:red;text-decoration:underline">CSS</a></li>
+        <li><a href="1.html" style="color:red">HTML</a></li>
+        <li><a href="2.html" style="text-decoration:underline">CSS</a></li>
         <li><a href="3.html" style="color:green">JavaScript</a></li>
     </ol>
 
