--- a/2.html
+++ b/2.html
@@ -11,6 +11,7 @@
         h1 {
             font-size: 500%;
             text-align: center;
+            text-shadow: 5px 5px #d9bdf3;
             margin: auto;
             width: 90%;
             border: 10px solid black;
