--- a/2.html
+++ b/2.html
@@ -3,15 +3,28 @@
 <head>
     <title>WEB1 - CSS</title>
     <meta charset="utf-8">
+    <!-- 
+        선택자는 [ #id - .class - element ] 순으로 강하다.
+
+        #id는 단 한 번만 등장해야 한다. (에러는 안 남) = 주민등록번호(중복되어선 안되는 것, 유일무이)
+
+        'element'로 전체적인 디자인 틀을 다진 후, '.class'나 '#id'로 예외적인 일을 후처리하는 흐름으로!
+    -->
     <style>
+        #active {
+            color:red;
+        }
+        .saw {
+            color:gray;
+        }
         a {
-            color: orange;
+            color:black;
             text-decoration: none;
         }
         h1 {
             font-size: 500%;
             text-align: center;
-            text-shadow: 5px 5px #d9bdf4;
+            text-shadow: 5px -5px #d9bdf4;
             margin: auto;
             width: 90%;
             border: 10px solid black;
@@ -21,11 +34,11 @@
 </head>
 
 <body>
-    <h1><a href="index.html" style="color:black">WEB1</a></h1>
+    <h1><a href="index.html">WEB1</a></h1>
     <ol><h3>목차</h3>
-        <li><a href="1.html" style="color:red">HTML</a></li>
-        <li><a href="2.html" style="text-decoration:underline">CSS</a></li>
-        <li><a href="3.html" style="color:green">JavaScript</a></li>
+        <li><a href="1.html" class="saw">HTML</a></li>
+        <li><a href="2.html" class="saw" id="active">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
     </ol>
 
     <!--
