--- a/2.html
+++ b/2.html
@@ -40,7 +40,7 @@
             display: grid;
             grid-template-columns: 150px 1fr;
         }
-        #article{
+        .article{
             padding-left: 30px;
             padding-right: 30px;
         }
@@ -56,7 +56,7 @@
             <li><a href="2.html">CSS</a></li>
             <li><a href="3.html">JavaScript</a></li>
         </ol>
-        <div id="article">
+        <div class="article">
             <h2>CSS</h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -65,7 +65,7 @@
     </div>
 
 
-
+    <div class="article">
     <p>
             <div id="disqus_thread"></div>
             <script>
@@ -88,5 +88,6 @@
             </script>
             <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
         </p>
+    </div>
 </body>
 </html>
