css file creation
css의 중복을 피하기 위해 css파일을 만드는 법을 배웠습니다.

--- a/2.html
+++ b/2.html
@@ -6,59 +6,11 @@
     <!-- 
         선택자는 [ #id - .class - element ] 순으로 강하다.
 
-        #id는 단 한 번만 등장해야 한다. (에러는 안 남) = 주민등록번호(중복되어선 안되는 것, 유일무이)
+        #id는 하나 당 단 한 번만 사용해야 한다. (에러는 안 남) = 주민등록번호(중복되어선 안되는 것, 유일무이)
 
         'element'로 전체적인 디자인 틀을 다진 후, '.class'나 '#id'로 예외적인 일을 후처리하는 흐름으로!
     -->
-    <style>
-        body {
-            margin: 0;
-            font-family: "Times New Roman", Times, serif;
-            font-size: 120%;
-        }
-        a {
-            color:black;
-            text-decoration: none;
-        }
-        h1 {
-            font-size: 300%;
-            text-align: center;
-            text-shadow: 5px -5px #ffecfd;
-            margin: 0;
-            border-bottom: 1px solid gray;
-            padding: 20px;
-        }
-
-        /* id값을 태그 앞에 붙임으로써 id값 안에 있는 태그만을 지칭할 수 있다 */
-        #grid ol {
-            padding-left:33px;
-            border-right: 1px solid gray;
-            margin:0;
-            padding-top: 20px;
-        }
-        #grid {
-            display: grid;
-            grid-template-columns: 150px 1fr;
-        }
-        #article{
-            padding-left: 30px;
-            padding-right: 30px;
-        }
-
-        @media(max-width:500px){
-            #grid{
-                display:block;
-            }
-
-            #grid ol {
-                border-right:none;
-            }
-
-            h1 {
-                border-bottom:none;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
