--- a/3.html
+++ b/3.html
@@ -3,22 +3,25 @@
 <head>
     <title>WEB1 - JavaScript</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1><a href="index.html"><font color = "red">WEB</font></a></h1>
-    <ol><h3>목차</h3>
-        <li><a href="1.html"><font color = "red">HTML</font></a></li>
-        <li><a href="2.html"><font color = "red">CSS</font></a></li>
-        <li><a href="3.html"><font color = "red">JavaScript</font></a></li>
-    </ol>
-
-    <h2>JavaScript</h2>
-    <h3>Introduction</h3>
-    <p>
-        자바스크립트 개쩜
-    </p>
-
+    <h1><a href="index.html">WEB</a></h1>
+    <div id="grid">
+        <ol>
+            <li><a href="1.html">HTML</a></li>
+            <li><a href="2.html">CSS</a></li>
+            <li><a href="3.html">JavaScript</a></li>
+        </ol>
+        <div id="article">
+            <h2>JavaScript</h2>
+            <h3>Introduction</h3>
+            <p>
+                자바스크립트 개쩜
+            </p>
+        </div>
+    </div>
     <p>
             <div id="disqus_thread"></div>
             <script>
