--- a/index.html
+++ b/index.html
@@ -13,17 +13,20 @@
     
         gtag('config', 'UA-130970189-1');
     </script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1><a href="index.html"><font color = "red">WEB</font></a></h1>
-    <ol><h3>목차</h3>
-        <li><a href="1.html"><font color = "red">HTML</font></a></li>
-        <li><a href="2.html"><font color = "red">CSS</font></a></li>
-        <li><a href="3.html"><font color = "red">JavaScript</font></a></li>
-    </ol>
-    
-    <img src="https://images.unsplash.com/photo-1522827218865-6f92388c094a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=60" width="450">
+    <h1><a href="index.html">WEB</a></h1>
+    <div id="grid">
+        <ol>
+            <li><a href="1.html">HTML</a></li>
+            <li><a href="2.html">CSS</a></li>
+            <li><a href="3.html">JavaScript</a></li>
+        </ol>
+        <div id="article">
+            <img src="https://images.unsplash.com/photo-1522827218865-6f92388c094a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=60" width="450">
+        </div>
 
 
 
@@ -32,8 +35,7 @@
 
 
 
-
-
+    </div>
     <p>
             <div id="disqus_thread"></div>
             <script>
