--- a/ex1.html
+++ b/ex1.html
@@ -5,6 +5,8 @@
         <title></title>
     </head>
     <body>
+        <input type="button" value="night" onclick="
         
+        ">
     </body>
 </html>
