--- a/3.html
+++ b/3.html
@@ -7,8 +7,22 @@
 </head>
 
 <body>
+    <input type="button" value="Dark" onclick="
+        document.querySelector('body').style.backgroundColor='#262626';
+        document.querySelector('body').style.color='#e8e8e8';
+        document.querySelector('a').style.color='#e8e8e8';
+        document.querySelector('#grid a').style.color='#e8e8e8';
+        document.querySelector('h1').style.color='#e8e8e8';
+    ">
+    <input type="button" value="Bright" onclick="
+        document.querySelector('body').style.backgroundColor='#e8e8e8';
+        document.querySelector('body').style.color='#262626';
+        document.querySelector('a').style.color='#262626';
+        document.querySelector('#grid a').style.color='#262626';
+        document.querySelector('h1').style.color='#262626';
+        ">
     <h1><a href="index.html">WEB</a></h1>
-    <div id="grid">
+        <div id="grid">
         <ol>
             <li><a href="1.html">HTML</a></li>
             <li><a href="2.html">CSS</a></li>
