--- a/1.html
+++ b/1.html
@@ -10,9 +10,16 @@
     <h1><a href="index.html">WEB</a></h1>
     <div id="grid">
         <ol>
-            <li><a href="1.html">HTML</a></li>
-            <li><a href="2.html">CSS</a></li>
-            <li><a href="3.html">JavaScript</a></li>
+        <script>
+            var i = 0;
+            var j = i + 1;
+            var list = ["HTML", "CSS", "JavaScript"];
+            while(i<list.length){
+                document.write('<li><a href="'+j+'.html">' + list[i] + '</a></li>');
+                i = i + 1;
+                j = j + 1;
+            }
+        </script>
         </ol>
         <div id="article">
             <p>
