--- a/3.html
+++ b/3.html
@@ -7,26 +7,41 @@
 </head>
 
 <body>
-    <input type="button" value="Dark" onclick="
-        document.querySelector('body').style.backgroundColor='#262626';
-        document.querySelector('body').style.color='#e8e8e8';
-        document.querySelector('a').style.color='#e8e8e8';
-        document.querySelector('#grid a').style.color='#e8e8e8';
-        document.querySelector('h1').style.color='#e8e8e8';
+    <input id="night_day" type="button" value="night" onclick="
+        var target = document.querySelector('body');
+        var links = document.querySelectorAll('a');
+        var i=0;
+        if(this.value === 'night'){
+            target.style.backgroundColor='black';
+            target.style.color='white';
+            while(i < links.length){
+                links[i].style.color = 'white';
+                i=i+1;
+            }
+            this.value = 'day';
+        } else {
+            target.style.backgroundColor='white';
+            target.style.color='black';
+            while(i < links.length){
+                links[i].style.color = 'black';
+                i=i+1;
+            }
+            this.value = 'night';
+        }
     ">
-    <input type="button" value="Bright" onclick="
-        document.querySelector('body').style.backgroundColor='#e8e8e8';
-        document.querySelector('body').style.color='#262626';
-        document.querySelector('a').style.color='#262626';
-        document.querySelector('#grid a').style.color='#262626';
-        document.querySelector('h1').style.color='#262626';
-        ">
     <h1><a href="index.html">WEB</a></h1>
         <div id="grid">
         <ol>
-            <li><a href="1.html">HTML</a></li>
-            <li><a href="2.html">CSS</a></li>
-            <li><a href="3.html">JavaScript</a></li>
+        <script>
+            var i = 0;
+            var j = i + 1;
+            var list = ["HTML", "CSS", "JavaScript"];
+            while(i<list.length){
+                document.write('<li><a href="'+j+'.html">' + list[i] + '</a></li>');
+                i = i + 1;
+                j = j + 1;
+            }
+        </script>
         </ol>
         <div id="article">
             <h2>JavaScript</h2>
@@ -58,5 +73,27 @@
             </script>
             <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
         </p>
+    <input id="night_day" type="button" value="night" onclick="
+        var target = document.querySelector('body');
+        var links = document.querySelectorAll('a');
+        var i=0;
+        if(this.value === 'night'){
+            target.style.backgroundColor='black';
+            target.style.color='white';
+            while(i < links.length){
+                links[i].style.color = 'white';
+                i=i+1;
+            }
+            this.value = 'day';
+        } else {
+            target.style.backgroundColor='white';
+            target.style.color='black';
+            while(i < links.length){
+                links[i].style.color = 'black';
+                i=i+1;
+            }
+            this.value = 'night';
+        }
+    ">
 </body>
 </html>
